ecmascript/parser/tests/test262-error-references/fail/ba2d36d35efa68ec.js.stderr
error: Unexpected token None
 --> $DIR/tests/test262-parser/fail/ba2d36d35efa68ec.js:1:5
  |
1 | a -->
  |     ^

